removed an id that was effected by browser's ad blocker

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div id="join_paypal">
       <h1>
-        <p id="big_ad">Join PayPal.<br />Earn $20 cash<br />back.</p>
+        <p>Join PayPal.<br />Earn $20 cash<br />back.</p>
       </h1>
       <p id="bottom_para">
         The first three purchases of $10 or more that you <br />
