centered text in buttons and added missing text

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <p id="bottom_para">
         The first three purchases of $10 or more that you <br />
         make with us could earn you $20 cash back (2,000 <br />
-        Rewards points).* To join and activate the offer, hit the
+        Rewards points).* To join and activate the offer, hit the <br /> button below.
       </p>
       <div id="button_1" class="button">Sign Up Here</div>
       <div id="button_2" class="button"">Learn More</div>
